2002-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/Makefile.in:
	* pp/session.cpp:
	* pp/session.h:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: handle --session options

2002-10-19  John Levon  <levon@movementarian.org>

	* configure.in: AC_HELP_STRING is too new for my autoconf
 
2002-10-18  Graydon Hoare  <graydon@redhat.com>

	* libabi/*: Add support for abi descriptions, for portability.
	* daemon/oprofiled.c:
	* dae/oprofiled.c: Emit abi description on startup.
	* configure.in: Add --enable-abi option.
	* make.common.in:
	* Makefile.in: Support building libabi/
 
2002-10-19  John Levon  <levon@movementarian.org>
 
	* utils/op_start_25: grep -o does not exist on any of
	  my systems - fix
 
2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: calculate symbol size after removing duplicate
	  symbol. Fix #625678

2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp:
	* pp/op_to_source_options.cpp:
	* pp/op_to_source_options.h:
	* doc/oprofile.1.in:
	* doc/oprofile.xml:  allow to pass multiple options to objdump

	* pp/opp_symbol.h:
	* pp/samples_container.cpp: store symbol size in symbol_entry object.

2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_reader.cpp: In some pathological case getline()
	  finished too early when child process write on stderr.

2002-10-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutill++/child_reader.cpp: read_block() : cumulate stderr
	  output rather to overwrite always the same buffer space ...

2002-10-16  John Levon  <levon@movementarian.org>

	* utils/op_start_25: check if mounted, from Will Cohen
	Also mkdir the mountpoint 
 
2002-10-16  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: get linux include path earlier

2002-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c:
	* daemon/oprofiled: strerrno --> strerror

2002-10-14  Philippe Elie  <phil.el@wanadoo.fr>
